--- a/public_html/styles/homepage.css
+++ b/public_html/styles/homepage.css
@@ -87,6 +87,10 @@
     box-shadow: 0px 1px 8px 2px rgba(0, 0, 0, 0.4);
 }
 
+.txt-shadow {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 .remove-elem {
     display: none;
 }
