Email compose editor implemented

--- a/public_html/templates/email_verification.html
+++ b/public_html/templates/email_verification.html
@@ -21,13 +21,13 @@ color: #3e3e3e;">
         <div style="font-size: 1.0em;
         line-height: 27px;
         margin-bottom: 20px;">
-            Your a step away from enjoying our exclusive services.</br>
+            You are a step away from enjoying our exclusive services.</br>
             <a style="text-decoration: underline; color: #219bd9;" href="<%= verification_url %>">Please, click this link to verify your email address</a>.
         </div>
         <div style="font-size: 1.0em;
         line-height: 27px;
         margin-bottom: 50px;">
-            If you did not expect this email, someone might mistype their email.
+            If you did not expect this email, someone might have mistyped their email. 
             Kindly ignore this message.
         </div>
     </div>
