--- a/public_html/styles/user_account.css
+++ b/public_html/styles/user_account.css
@@ -449,6 +449,320 @@ ul.menu-link-cont .user-cont:hover .fa-caret-down {
     color: #3d9eee;
 }
 
+#compose-mail-editor {
+    position: fixed;
+    top: 12%;
+    left: 50%;
+    width: 850px;
+    margin-left: -425px;
+    z-index: 110;
+}
+
+.compose-mail-editor-wrapper {
+    min-height: 250px;
+    margin: 10px;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    border-top: 1px solid lightgray;
+    background-color: white;
+    box-shadow: 0px 8px 7px 0px rgba(0, 0, 0, 0.4);
+}
+
+#compose-mail-editor .mail-header-cont {
+    margin-top: 10px;
+}
+
+#compose-mail-editor .mail-header-cont input {
+    height: 40px;
+    width: 100%;
+    font-size: 1.2em;
+    color: #5a5a5a;
+    padding: 0px 10px;
+    border: none;
+    outline: none;
+    border-bottom: 1.5px solid lightgray;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+#compose-mail-editor .edit-body-cont {
+    height: 280px;
+    padding: 0px 10px;
+    margin-bottom: 20px;
+    overflow-y: auto;
+}
+
+#compose-mail-editor .edit-body {
+    display: inline-block;
+    width: 100%;
+    min-height: 280px;
+    border: none;
+    outline: none;
+}
+
+#compose-mail-editor .editor-menu-btn-cont {
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    box-sizing: border-box;
+    padding-top: 2px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+#compose-mail-editor .edit-footer-cont {
+    margin-bottom: 15px;
+}
+
+#compose-mail-editor .edit-footer-cont .send-msg-btn {
+    padding: 8px 35px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 1.0em;
+    color: white;
+    cursor: default;
+    background: rgb(0, 120, 215);
+    background: -webkit-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: -o-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: -moz-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+}
+
+#compose-mail-editor .edit-footer-cont .send-msg-btn:hover {
+    box-shadow: 0px 2px 4px 1px gray;
+}
+
+#compose-mail-editor .edit-footer-cont .send-msg-btn:disabled:hover {
+    box-shadow: unset!important;
+}
+
+#compose-mail-editor .editor-menu-btn-cont .mail-editor-icon {
+    padding: 3px 8px;
+    font-size: 1.2em;
+}
+
+#compose-mail-editor .editor-menu-btn-cont .mail-editor-icon:hover {
+    background-color: lightgray;
+    border-radius: 3px;
+}
+
+#compose-mail-editor .editor-menu-btn-cont .mail-editor-input[highlighted="true"] {
+    background-color: lightgray;
+    border-radius: 3px;
+}
+
+/*new menu*/
+#compose-mail-editor .main-menu-cont {
+    display: inline-block;
+    padding-top: 4px;
+    overflow: hidden;
+    background-color: white;
+}
+
+#compose-mail-editor .main-menu-cont.show-tray .pop-menu {
+    visibility: visible;
+}
+
+#compose-mail-editor .main-menu-cont.hide-tray .pop-menu {
+    visibility: hidden;
+}
+
+#compose-mail-editor .main-menu-cont .show-hidden-menu-btn {
+    float: left;
+    width: 40px;
+    height: 35px;
+    text-align: center;
+    cursor: default;
+}
+
+#compose-mail-editor .main-menu-cont .show-hidden-menu-btn i {
+    font-size: 1.4em;
+    color: #6b6b6b;
+    line-height: 35px;
+}
+
+#compose-mail-editor .main-menu-cont .menu-cont-1 {
+    float: left;
+    background-color: white;
+}
+
+#compose-mail-editor .main-menu-cont .menu-cont-2 {
+    float: left;
+    background-color: white;
+}
+
+#compose-mail-editor .main-menu-cont .menu-cont-3 {
+    float: left;
+    background-color: white;
+}
+
+#compose-mail-editor .main-menu-cont .menu-btn {
+    float: left;
+    padding: 2px;
+    color: #6b6b6b;
+    cursor: default;
+}
+
+#compose-mail-editor .main-menu-cont .pop-menu {
+    position: absolute;
+    left: 0px;
+    padding: 4px;
+    border-top: 1px solid lightgray;
+    box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+}
+/*new menu end here*/
+
+.ux-custom-select-input .select-option {
+    display: table;
+    width: 100%;
+    outline: none;
+    border: none;
+    box-sizing: border-box;
+    cursor: default;
+    text-align: left;
+    font-size: 1.0em;
+    color: #5a5a5a;
+    background-color: white;
+    overflow: hidden;
+}
+
+.ux-custom-select-input .select-option .selected-item {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    font-size: 1.0em;
+}
+
+.ux-custom-select-input .select-option .selected-item .name-cont {
+     overflow: hidden;
+ }
+
+ .ux-custom-select-input .select-option .selected-item .name {
+     width: 500px;
+ }
+
+.ux-custom-select-input .select-option .icon {
+    display: table-cell;
+    vertical-align: middle;
+    min-width: 20px;
+    text-align: center;
+    font-size: 1.1em;
+    color: #7d7d7d;
+}
+
+.ux-custom-select-input .option-list-cont {
+    position: absolute;
+    background-color: white;
+    border-top: 1px solid whitesmoke;
+    box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+.ux-custom-select-input .option-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 5px 0px;
+}
+
+.ux-custom-select-input .option-list > li {
+    display: block;
+    padding: 10px 20px;
+    font-size: 1.0em;
+}
+
+.ux-custom-select-input .option-list > li.selected {
+    background-color: lightgray;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+.ux-custom-select-input .option-list > li:hover {
+    background-color: lightgray;
+}
+
+.editor-font-name-select-input {
+    border-right: 1px solid lightgray;
+    padding-right: 1px;
+}
+
+.editor-font-color-selector:hover {
+    background-color: lightgray;
+    border-radius: 3px;
+}
+
+.editor-font-name-select-input.ux-custom-select-input .select-option {
+    height: 30px;
+}
+
+.editor-font-name-select-input.ux-custom-select-input .option-list {
+    min-width: 200px;
+}
+
+.editor-font-name-select-input.ux-custom-select-input {
+    width: 140px;
+}
+
+.editor-font-name-select-input.ux-custom-select-input .select-option .selected-item .name-cont {
+    width: 105px;
+}
+
+.editor-font-size-select-input {
+    border-right: 1px solid lightgray;
+    padding-right: 1px;
+}
+
+.editor-font-size-select-input.ux-custom-select-input .select-option {
+    height: 30px;
+}
+
+.editor-font-size-select-input.ux-custom-select-input .option-list {
+    min-width: 70px;
+}
+
+.editor-font-size-select-input.ux-custom-select-input {
+    width: 60px;
+}
+
+.editor-font-size-select-input.ux-custom-select-input .select-option .selected-item .name-cont {
+    width: 25px;
+}
+
+.editor-font-color-selector .label-cont {
+    width: 30px;
+    padding: 2px 3px;
+    padding-bottom: 2px;
+    text-align: center;
+    font-size: 1.2em;
+    border-radius: 2px;
+}
+
+.editor-font-color-selector .selector-cont {
+    position: absolute;
+    background-color: white;
+    border-top: 1px solid whitesmoke;
+    box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+.editor-font-color-selector .color-grid-cont {
+    width: 180px;
+    height: 120px;
+    padding: 4px;
+}
+
+.editor-font-color-selector .color-grid-cont > .grid-item {
+    height: 30px;
+    box-sizing: border-box;
+}
+
+.editor-font-color-selector .color-grid-cont > .grid-item:hover {
+    border: 2px solid white;
+}
+
 #notification-win-cont {
     position: fixed;
     top: 75px;
@@ -466,18 +780,21 @@ ul.menu-link-cont .user-cont:hover .fa-caret-down {
     box-shadow: 0px 8px 7px 0px rgba(0, 0, 0, 0.4);
 }
 
-#notification-win-cont .title-bar-cont {
+#notification-win-cont .title-bar-cont, 
+#compose-mail-editor .title-bar-cont {
     overflow: hidden;
 }
 
-#notification-win-cont .title-bar-cont > .title {
+#notification-win-cont .title-bar-cont > .title, 
+#compose-mail-editor .title-bar-cont > .title {
     float: left;
     margin: 8px 0;
     font-family: sans-serif;
     font-size: 1.3em;
 }
 
-#notification-win-cont .title-bar-cont > .close-btn {
+#notification-win-cont .title-bar-cont > .close-btn, 
+#compose-mail-editor .title-bar-cont > .close-btn {
     float: right;
     position: relative;
     width: 25px;
@@ -488,7 +805,8 @@ ul.menu-link-cont .user-cont:hover .fa-caret-down {
     cursor: default;
 }
 
-#notification-win-cont .title-bar-cont > .close-btn > img {
+#notification-win-cont .title-bar-cont > .close-btn > img, 
+#compose-mail-editor .title-bar-cont > .close-btn > img {
     position: relative;
     top: 1px;
     left: 6.8px;
@@ -496,7 +814,8 @@ ul.menu-link-cont .user-cont:hover .fa-caret-down {
     height: 12px;
 }
 
-#notification-win-cont .title-bar-cont > .close-btn:hover {
+#notification-win-cont .title-bar-cont > .close-btn:hover, 
+#compose-mail-editor .title-bar-cont > .close-btn:hover {
     background-color: rgb(255, 70, 70);
 }
 
@@ -2262,6 +2581,12 @@ ul.menu-link-cont .user-cont:hover .fa-caret-down {
 }
 
 @media only screen and (max-width: 800px) {
+    #compose-mail-editor {
+        width: 100%;
+        left: 0;
+        margin-left: 0;
+    }
+
     .current-inv-stat-wrapper .grid-item {
         width: 50%!important;
     }
@@ -2389,6 +2714,16 @@ ul.menu-link-cont .user-cont:hover .fa-caret-down {
 
     .page-footer-cont ul.footer-links > li {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    #compose-mail-editor {
+        top: 75px;
+    }
+
+    #compose-mail-editor .edit-body-cont {
+        height: 180px;
     }
 }
 
