--- a/public_html/templates/email_verification.html
+++ b/public_html/templates/email_verification.html
@@ -6,7 +6,7 @@ font-family: sans-serif;
 color: #3e3e3e;">
     <div style="text-align: center;
     margin-bottom: 35px;">
-        <img alt="citadel" src="cid:site-logo" width="221" height="40">
+        <img alt="citadel" src="cid:site-logo" width="221" height="40" />
     </div>
     <div style="padding: 10px;
     padding-top: 30px;
@@ -39,12 +39,12 @@ color: #3e3e3e;">
            display: inline;">
                 <li style="display: inline-block; padding-right: 10px;">
                     <a href="https://web.facebook.com/thecitadelcapitalpartners/">
-                        <img alt="facebook" src="cid:fb-logo" width="45" height="45">
+                        <img alt="facebook" src="cid:fb-logo" width="45" height="45" />
                     </a>
                 </li>
                 <li style="display: inline-block;">
                     <a href="https://twitter.com/JamieCitadel">
-                        <img alt="twitter" src="cid:tw-logo" width="45" height="45">
+                        <img alt="twitter" src="cid:tw-logo" width="45" height="45" />
                     </a>
                 </li>
             </ul>
